# ros2_foxy

./: .gitignore  README.md
charpter4/install/: local_setup.sh  setup.sh
charpter4/log/: latest_build
charpter4/src/village_li/: setup.py
charpter4/src/village_li/village_li/: li4.py
charpter4/src/village_wang/: CMakeLists.txt
charpter4/src/village_wang/src/: wang2.cpp
charpter4/src/village_zhang/: package.xml
charpter5/src/village_interfaces/: CMakeLists.txt  package.xml
charpter5/src/village_li/: package.xml  setup.py
charpter5/src/village_li/village_li/: li4.py
charpter5/src/village_wang/: package.xml
charpter5/src/village_wang/src/: wang2.cpp
charpter5/src/village_zhang/: CMakeLists.txt
charpter5/src/village_zhang/src/: zhang3.cpp
ros2_town/install/: local_setup.sh  setup.sh
ros2_town/log/: latest_build
ros2_town/src/village_interfaces/: CMakeLists.txt
ros2_town/src/village_li/: package.xml  setup.py
ros2_town/src/village_li/village_li/: li3.py  li5.py
ros2_town/src/village_wang/: CMakeLists.txt  package.xml
ros2_town/src/village_wang/src/: wang1.cpp  wang2.cpp  wang3.cpp  wang4.cpp
ros2_town/src/village_zhang/: CMakeLists.txt  package.xml
ros2_town/src/village_zhang/src/: zhang3.cpp
第 1 章 ROS2介绍/: 1.3 ROS2 常用命令.md  ROS2 常用命令.md
第 2 章 准备环境与安装ROS2/: 项目配置.md
第 3 章 动手学ROS2基础/: 3.1 ROS2节点介绍.md  3.2 ROS2工作空间与功能包.md  3.3 ROS2构建工具—Colcon.md  3.4 带你手撸一个Python节点.md  3.5 手撸一个C++节点.md  扩展资料1-本章CLI工具总结.md  第 3 章 章节介绍.md
第 4 章 通信机制上(话题与服务)/: 4.1 ROS2话题介绍.md  4.10 章节练习.md  4.2ROS2话题编程实现.md  4.3 接口介绍和定义接口.md  4.4ROS2服务介绍.md  4.5ROS2服务编程实现.md  4.6话题VS服务.md  4.8补充回调函数.md  4.9 补充通讯机制整体结构.md  章节介绍.md
第 5 章 通信机制下(参数与Action)/: 5.1ROS2参数介绍.md  5.2使用Python玩转参数.md  5.4ROS2_Action介绍.md  5.6Action客户端C++实现.md
(+25 files in other folders)
