cmake_minimum_required(VERSION 3.5)
project(village_wang)

# Default to C99
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
# 查询自定义接口包
find_package(village_interfaces REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # uncomment the line when a copyright and license is not present in all source files
  #set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # uncomment the line when this package is not in a git repo
  #set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
add_executable(wang1_node src/wang1.cpp)
ament_target_dependencies(wang1_node rclcpp)
install(TARGETS
  wang1_node
  DESTINATION lib/${PROJECT_NAME}
)

add_executable(wang2_node src/wang2.cpp)
ament_target_dependencies(wang2_node rclcpp)
install(TARGETS
  wang2_node
  DESTINATION lib/${PROJECT_NAME}
)

add_executable(wang3_node src/wang3.cpp)
ament_target_dependencies(wang3_node rclcpp)
install(TARGETS
  wang3_node
  DESTINATION lib/${PROJECT_NAME}
)
# 使用自定义接口的节点,测试
add_executable(wang4_node src/wang4.cpp)
ament_target_dependencies(wang4_node 
  rclcpp
  village_interfaces
)
install(TARGETS
  wang4_node
  DESTINATION lib/${PROJECT_NAME}
)